--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -3,50 +3,60 @@
 		<h1>dashboard</h1>
 		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
 
-		<!--<button class="btn btn-default" ng-click="sideNavToggle()">TOGGLE</button>
+		<span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span>
 		<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="false">
 			<md-toolbar style="background-color:rgb(35, 170, 159)" class="md-primary md-hue-2">
-				<h1 class="md-toolbar-tools">Dashboard</h1>
 			</md-toolbar>
 			<md-content>
 				<md-list>
 					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" style="background:#e8e8e8;">
 						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="/dashboard"><span class="pull-left ct-red">Home</span><md-icon class="pull-right"></md-icon></a></h3>
+							<h3><a ui-sref=""><span class="pull-left ct-red">Home</span><md-icon class="pull-right"></md-icon></a></h3>
 						</div>
 					</md-list-item>
 					<md-divider ></md-divider>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/accounts')">
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/markets')">
 						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="sites"><span class="pull-left ct-red">Accounts</span><md-icon class="pull-right"></md-icon></a></h3>
+							<h3><a ui-sref="sites"><span class="pull-left ct-red">Markets</span><md-icon class="pull-right"></md-icon></a></h3>
 						</div>
 					</md-list-item>
 					<md-divider ></md-divider>
-					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('/sites')">
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('member/troverman')">
 						<div class="md-list-item-text" layout="column">
-							<h3><a ui-sref="sites"><span class="pull-left ct-red">Sites</span><md-icon class="pull-right"></md-icon></a></h3>
+							<h3><a ui-sref="sites"><span class="pull-left ct-red">Portfolio</span><md-icon class="pull-right"></md-icon></a></h3>
+						</div>
+					</md-list-item>
+					<md-divider ></md-divider>
+					<md-list-item ui-sref-active="active" class="menu-select md-3-line" md-ink-ripple="#101010" ng-click="changePath('')">
+						<div class="md-list-item-text" layout="column">
+							<h3><a ui-sref="sites"><span class="pull-left ct-red">Trades</span><md-icon class="pull-right"></md-icon></a></h3>
 						</div>
 					</md-list-item>
 					<md-divider ></md-divider>
 
 				</md-list>
 			</md-content>
-		</md-sidenav>-->
+		</md-sidenav>
 
 
-		<!--<div style="float:right;text-align:right" class="col-sm-12">-->
-			<canvas id="doughnut" class="chart chart-doughnut" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>
-			<!--<canvas id="doughnut" class="chart chart-radar" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>-->
-			<!--<canvas id="doughnut" class="chart chart-polar-area" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>-->
-		<!--</div>-->
+		<div class="row">
+			<div class="col-md-12">
+				<canvas id="doughnut" class="chart chart-doughnut" chart-data="portfolioData" chart-labels="portfolioLabels"></canvas>
+			</div>
+			<!--<div class="col-md-4">
+				<highchart config="chartConfig"></highchart>
+			</div>-->
+		</div>
 
-
-		<p>{{btcValue}}</p>
-		<p>{{btcOrderValue}}</p>
-		<p>{{btcValue+btcOrderValue}}</p>
+		<div>
+			<p>available to trade: {{btcValue}} BTC</p>
+			<p>order value: {{btcOrderValue}} BTC</p>
+			<p>protfolio value: {{btcValue+btcOrderValue}} BTC</p>
+		</div>
 
 		<br><br>
-		<div style="max-height:250px;overflow:scroll">
+		<h1>assets</h1>
+		<div>
 			<table class="table table-striped table-hover">
 			    <thead>
 					<tr>
@@ -69,7 +79,7 @@
 
 		<br><br>
 		<h1>order book</h1>
-		<div style="max-height:250px;overflow:scroll">
+		<div>
 			<table class="table table-striped table-hover">
 			    <thead>
 					<tr>
