--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -43,7 +43,7 @@
 
 <div class="container" style="text-align:left">
     <div style="height:25px;"></div>
-    <h2>investingfor</h2>
+    <h2>CRE8.CAPITAL</h2>
     <p>a network consisting of thousands of companies and individuals spanning the globe.</p> 
     <p>intelligence that learns and works with you to create value and amass wealth</p>
     <p>a network of analysts spanning the globe. a strong team.</p>
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <h3><i class="fa fa-file-o"></i> open datasets</h3>
-                <p style="font-style:italic">data, we use. data we prouduce, together.</p>
+                <p style="font-style:italic">data, we use. data we produce, together.</p>
             </div>
             <div class="col-sm-6" style="overflow:hidden">
                 <img src="images/2.gif">
