--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -1,6 +1,6 @@
 <div ng-show="currentUser">
 	<div class="container" style="text-align:left">
-		<h1>dashboard</h1>
+		<h1>Dashboard</h1>
 		<p><a href="account">link in wallets, connect api keys, fund account</a></p>
 
 		<span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span>
@@ -33,7 +33,6 @@
 						</div>
 					</md-list-item>
 					<md-divider ></md-divider>
-
 				</md-list>
 			</md-content>
 		</md-sidenav>
@@ -49,13 +48,13 @@
 		</div>
 
 		<div>
-			<p>available to trade: {{btcValue}} BTC</p>
-			<p>order value: {{btcOrderValue}} BTC</p>
-			<p>protfolio value: {{btcValue+btcOrderValue}} BTC</p>
+			<p>Available to Trade: {{btcValue}} BTC</p>
+			<p>Order value: {{btcOrderValue}} BTC</p>
+			<p>Protfolio Value: {{btcValue+btcOrderValue}} BTC</p>
 		</div>
 
-		<br><br>
-		<h1>assets</h1>
+		<div class="spacing-10"></div>
+		<h1>Assets</h1>
 		<div>
 			<table class="table table-striped table-hover">
 			    <thead>
@@ -77,8 +76,8 @@
 			</table>
 		</div>
 
-		<br><br>
-		<h1>order book</h1>
+		<div class="spacing-10"></div>
+		<h1>Order Book</h1>
 		<div>
 			<table class="table table-striped table-hover">
 			    <thead>
@@ -102,7 +101,7 @@
 			</table>
 		</div>
 
-		<br><br>
+		<div class="spacing-10"></div>
 		<h1>markets</h1>
 		<div ng-repeat="pair in tradingPairs">
 			<div class="col-md-3 col-sm-4 col-xs-6 ">
@@ -119,103 +118,78 @@
 	<nvd3 options='directedOptions' data='directedData'></nvd3>-->
 
 	<div class="container" id="about">
-		<div style="height:50px;"></div>
+		<div class="spacing-50"></div>
 		<div class="row">
 			<div class="col-sm-12">
 			    <div style="text-align:left;" id="header-text-area">
-			       <h1>empowered financial representation</h1>
-			       <h3 style="">backed by sound, open data</h3>
+			       <h1>Empowered Financial Representation</h1>
+			       <h3 style="">Backed by Sound, Open Data</h3>
 			    </div>
 			</div>
 		</div>
-		<div style="height:50px;"></div>
+		<div class="spacing-50"></div>
 	</div>
 
 	<div class="container" style="text-align:left">
-		<div style="height:100px;"></div>
+		<div class="spacing-50"></div>
 		<div class="row">
 			<div class="col-sm-6">
-				<h3>sound financial intellligence; continually learning</h3>
-				<!--<p>intellligence; continually learning</p>-->
-				<p>a community of analysts; select representation</p>
+				<h3>A Financial Intellligence Continually Learning</h3>
+				<p>Guided by a Community of Analysts; Select Your Representation</p>
 			</div>
-			<!--<div class="col-sm-6">
-				<img src="images/tesseract-bg.png">
-			</div>-->
+			<div class="col-sm-6" style="text-align:right">
+				<img style="max-height:300px;" src="images/1.gif">
+			</div>
 		</div>
-		<div style="height:100px;"></div>
+		<div class="spacing-50"></div>
 		<div class="row">
 			<div class="col-sm-4">
 				<img src="images/tesseract-bg.png">
 			</div>
 			<div class="col-sm-8" style="text-align:right">
-				<h3>collaboration and contribution</h3>
-				<p>contribute. collab. invest.</p>
+				<h3>Collaboration and Contribution</h3>
+				<p>The collaborative.capital engine is continually learning from intelligence produced from your machienes and analytic insight.</p>
+				<p>Deep Learning Techniques create actionable intelligence.</p>
+				<h3>Cutting Edge Analysis at Scale</h3>
+				<p>Distributed Networks work to give you the cutting edge</p>
+				<p>Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns</p>
 			</div>
 		</div>
-		<div style="height:100px;"></div>
+		<div class="spacing-50"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3>open and transparent data</h3>
-				<p>data we use, data we prouduce, together.</p>
+				<h3>Open Intelligence</h3>
+				<p>Data we use, data we prouduce, together.</p>
 			</div>
 		</div>
-		<div style="height:100px;"></div>
-		<div class="row">
-			<div class="col-sm-12" style="text-align:right">
-				<h3>cutting edge analysis at scale</h3>
-				<p>distributed networks working to give you the cutting edge.</p>
-				<p>computational intelligence designed to normalize risk and equalize investment returns.</p>
-			</div>
-		</div>
-		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3>transparent financial results </h3>
-				<p>data-backed with proven results</p>
+				<h3>Transparent Results </h3>
+				<p>Data-backed with proven results.</p>
 			</div>
 		</div>
-		<div style="height:100px;"></div>
+		<div class="spacing-50"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="lead">nice...</p>
-				<a href="/about" class="btn btn-default log-btn">now let me see some numbers</a>
-				<br><br>
+				<a href="/about" class="btn btn-default log-btn">Learn More</a>
+				<div class="spacing-10"></div>
 			</div>
 		</div>
 	</div>
-
-	<!--
-	<div style="background-color:rgb(220,220,220);">
-		<br><br><br>
-		<h1 style="text-align:center;">why you'll love investingfor</h1>
-		<br><br>
-		<p style="text-align:center;"><i style="font-size:256px;" class="fa fa-heart-o"></i></p>
-		<p class="lead" style="text-align:center;">the computing power around us is immense!</p>
-		<br>
-		<p class="lead" style="text-align:center;">investingfor uses the idle power of the computational potiental around us.</p>
-		<br>
-		<p class="lead" style="text-align:center;">what if our devices were working toward a common goal?</p>
-		<br>
-		<p class="lead" style="text-align:center;">extract value by earning crypto-backed <a href="http://www.epoint.me/market/investment-point">investment points</a>.</p>
-		<br>
-		<p class="lead" style="text-align:center;">investingfor us all.</p>
-		<br><br><br>
-	</div>
-	-->
 
 	<div style="text-align:left">
-		<br><br><br>
+		<div class="spacing-50"></div>
 		<div class="container" style="">
-			<h1>market exposure</h1>
+			<h1><a href="/markets">Market Exposure</a></h1>
 			<!--<nvd3 options='options' data='data'></nvd3>-->
-			<br><br>
+			<div class="spacing-10"></div>
 
 			<div ng-repeat="pair in tradingPairs">
 				<div class="col-md-3 col-sm-4 col-xs-6 ">
 					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 				</div>
 			</div>
+
 			<!--
 			<div class="col-md-4">
 				<table class="table table-inverse table-hover">
@@ -238,28 +212,26 @@
 			-->
 
 		</div>
+		<div class="spacing-50"></div>
 	</div>
-
-	<br><br><br>
-
 
 	<div style="text-align:left;color:gray;background-color:black;">
 		<style>.nvd3 text{color:gray;fill:gray;}.nvd3 .nv-axis line{stroke:gray;}</style>
-		<br><br><br>
+		<div class="spacing-50"></div>
 		<div class="container">
-			<h1>activity</h1>
+			<h1>Activity</h1>
 			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
 			<!--<highchart config="chartConfig"></highchart>-->
-			<br>
 			<!--daily return vs index..-->
-			<!--<h4>sound and transparent investments</h4>-->
+			<div class="spacing-50"></div>
 		</div>
 	</div>
+
 	<div style="text-align:left;" class="container">
-		<br><br>
-		<h1>order book</h1>
-		<h4>sound and transparent investments</h4>
-		<br><br>
+		<div class="spacing-50"></div>
+		<h1>Order Book</h1>
+		<h4>Transparent Investments</h4>
+		<div class="spacing-10"></div>
 		<table class="table table-inverse table-hover">
 		    <thead>
 				<tr>
@@ -279,12 +251,10 @@
 					<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
 					<!--<td>{{order.createdAt | date :  "s.m.h.dd.MM.y"}}</td>-->
 					<!--<td>{{order.createdAt | date :  "medium"}}</td>-->
-
 				</tr>
 		    </tbody>
 		</table>
-		
-		<br><br>
+		<div class="spacing-50"></div>
 	</div>
 
 	<div ng-include="'register/index.tpl.html'"></div>
