--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -42,16 +42,16 @@
 </div>
 
 <div class="container" style="text-align:left">
-    <div style="height:25px;"></div>
+    <div class="spacing-25"></div>
     <h2>CRE8.CAPITAL</h2>
-    <p>a network consisting of thousands of companies and individuals spanning the globe.</p> 
-    <p>intelligence that learns and works with you to create value and amass wealth</p>
-    <p>a network of analysts spanning the globe. a strong team.</p>
+    <p>A network consisting of thousands of companies and individuals spanning the globe.</p> 
+    <p>Intelligence that learns and works with you to create value and amass wealth.</p>
+    <p>A network of analysts spanning the globe. A strong team.</p>
+    <div class="spacing-25"></div>
     <img src="images/3.jpg" style="max-width:100%">
     <img src="images/4.jpg" style="max-width:100%">
     <!--<img src="images/5.jpg" style="max-width:100%">-->
-    <div style="height:100px;"></div>
-    <div style="height:100px;"></div>
+    <div class="spacing-50"></div>
 </div>
 
 <!--<div style="height:20vh;overflow:hidden">
@@ -59,19 +59,23 @@
 </div>-->
 
 <div style="color:white;background-color:black">
-    <div style="height:100px;"></div>
+    <div class="spacing-50"></div>
     <div class="container" style="text-align:left">
         <div class="row">
             <div class="col-sm-6">
-                <h3><i class="fa fa-file-o"></i> open datasets</h3>
-                <p style="font-style:italic">data, we use. data we produce, together.</p>
+                <!--<h3><i class="fa fa-file-o"></i> Open Data</h3>
+                <p style="font-style:italic">Data, we use. Data we produce, together.</p>-->
+                <h3>Cutting Edge Analysis at Scale</h4>
+                <h3>Open Intelligence</h3>
+                                <h3>Collaboration and Contribution</h3>
+
             </div>
-            <div class="col-sm-6" style="overflow:hidden">
-                <img src="images/2.gif">
+            <div class="col-sm-6" style="overflow:hidden; text-align:right">
+                <img style="height:200px"src="images/2.gif">
             </div>
         </div>
     </div>
-    <div style="height:100px;"></div>
+    <div class="spacing-50"></div>
 </div>
 
 <div class="container" style="text-align:left">
@@ -84,52 +88,51 @@
     <img src="images/34.jpg" style="width:100%">-->
 
 
-    <div style="height:100px;"></div>
+    <div class="spacing-50"></div>
 
     <div class="row">
-        
         <div class="col-sm-6">
-            <highchart config="bidAskChart"></highchart>
-        </div>
-
-        <div class="col-sm-6" style="text-align:right">
-            <h3>community analysts</h3>
-            <p style="font-style:italic">contribute. collab. invest.</p>
+            <h3>Open Intelligence</h3>
+            <h5>Community Analysts</h5>
             <img style="max-height:300px" src="images/heatmap.png">
         </div>
 
-        <div class="col-xs-12"><div style="height:200px;"></div></div>
-
         <div class="col-sm-6">
-            <h3>transparent finance </h3>
-            <p style="font-style:italic">we create valuable investment intelligence.</p>
+            <highchart config="bidAskChart"></highchart>
+        </div>
+    </div>
+    
+    <div class="spacing-50"></div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>Transparent Finance </h3>
+            <p style="font-style:italic">We Create Valuable Intelligence</p>
         </div>
 
         <div class="col-sm-6">
-            <!--<img src="images/heatmap.png">-->
             <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
+    </div>
 
-        <div class="col-xs-12"><div style="height:200px;"></div></div>
+    <div class="spacing-50"></div>
 
+    <div class="row">
         <div class="col-sm-6">
-            <h3>mapping the market</h3>
-            <p style="font-style:italic"></p>
+            <h3>Mapping the Market</h3>
+            <highchart config="bidAskChart"></highchart>
         </div>
 
         <div class="col-sm-6">
             <!--<highchart config="heatMapChart"></highchart>-->
-            <highchart config="bidAskChart"></highchart>
         </div>
-
-
     </div>
 
-    <div style="height:100px;"></div>
+    <div class="spacing-50"></div>
     <highchart config="chartConfig"></highchart>
 
 
 
 </div>
-<div style="height:100px;"></div>
+<div class="spacing-50"></div>
 <div ng-include="'register/index.tpl.html'"></div>
