--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -220,8 +220,7 @@
 		<div class="spacing-50"></div>
 		<div class="container">
 			<h1>Activity</h1>
-			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
-			<!--<highchart config="chartConfig"></highchart>-->
+			<highchart config="chartConfig"></highchart>
 			<!--daily return vs index..-->
 			<div class="spacing-50"></div>
 		</div>
