--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -16,134 +16,90 @@
 </md-sidenav>
 
 <div class="container" style="text-align:left">
-	<br>
-	<span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span>
-	<h2>{{selectedPair[0]}} / {{selectedPair[1]}}</h2>
+	<div class="spacing-15"></div>
+	<div class="row">
+		<h2><span ng-click="sideNavToggle()"><i style="font-size:24px" class="fa fa-bars"></i></span> {{selectedPair[0]}} / {{selectedPair[1]}}</h2>
+	</div>
 
 	<div class="row">
 		<button ng-class="selectedClass('Live')" ng-click="getLive()">Live</button>
-		<button ng-class="selectedClass('5000')" ng-click="selectData(stateParams.path1, stateParams.path2, '5000')">5sec </button>
-		<button ng-class="selectedClass('30000')" ng-click="selectData(stateParams.path1, stateParams.path2, '30000')">30sec</button>
-		<button ng-class="selectedClass('60000')" ng-click="selectData(stateParams.path1, stateParams.path2, '60000')">1min </button>
-		<button ng-class="selectedClass('300000')" ng-click="selectData(stateParams.path1, stateParams.path2, '300000')">5min </button>
-		<button ng-class="selectedClass('1800000')" ng-click="selectData(stateParams.path1, stateParams.path2, '1800000')">30min</button>
-		<button ng-class="selectedClass('3600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '3600000')">1hr  </button>
-		<button ng-class="selectedClass('7200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '7200000')">2hr  </button>
-		<button ng-class="selectedClass('14400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '14400000')">4hr  </button>
-		<button ng-class="selectedClass('21600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '21600000')">6hr  </button>
-		<button ng-class="selectedClass('43200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '43200000')">12hr </button>
-		<button ng-class="selectedClass('86400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '86400000')">24hr </button>
+		<button ng-class="selectedClass('5000')" ng-click="selectData(stateParams.path1, stateParams.path2, '5000')">5sec </button><!--x6-->
+		<button ng-class="selectedClass('30000')" ng-click="selectData(stateParams.path1, stateParams.path2, '30000')">30sec</button><!--x2-->
+		<button ng-class="selectedClass('60000')" ng-click="selectData(stateParams.path1, stateParams.path2, '60000')">1min </button><!--x5-->
+		<button ng-class="selectedClass('300000')" ng-click="selectData(stateParams.path1, stateParams.path2, '300000')">5min </button><!--x6-->
+		<button ng-class="selectedClass('1800000')" ng-click="selectData(stateParams.path1, stateParams.path2, '1800000')">30min</button><!--x2-->
+		<button ng-class="selectedClass('3600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '3600000')">1hr  </button><!--x2-->
+		<button ng-class="selectedClass('7200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '7200000')">2hr  </button><!--x2-->
+		<button ng-class="selectedClass('14400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '14400000')">4hr  </button><!--x2-->
+		<button ng-class="selectedClass('21600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '21600000')">6hr  </button><!--x3/2-->
+		<button ng-class="selectedClass('43200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '43200000')">12hr </button><!--x2-->
+		<button ng-class="selectedClass('86400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '86400000')">24hr </button><!--x2-->
 	</div>
 	<hr>
 	<!--how much data..?-->
 	<!--zoom out ability.. a lot-->
+	<div class="row">
+		<h2>Price Data</h2>
+		<button class="btn btn-default" ng-click="getEma([20,40,80,160,320,640],'price')">EMA</button><!--select periods..?-->
+		<button class="btn btn-default" ng-click="getTsf([20,40,80,160,320,640],'price')">TSF</button><!--select periods..?-->
+		<button class="btn btn-default" ng-click="getBband([10],[1,2,3],'price')">BBAND</button><!--select periods / stD.?-->
+		<!--<button class="btn btn-default" ng-click="getNn('price')">nn</button>-->
+		<!--<button class="btn btn-default" ng-click="getPdf('price')">pdf</button>--><!--;)-->
+		<hr>
+		<div class="col-md-9"><highchart config="chartConfig"></highchart></div>
+		<div class="col-md-3"><highchart config="bidAskChart"></highchart></div>
+		<!--<highchart config="chartConfig"></highchart>-->
+	</div>
+	<!--<h2>Order Book</h2><hr>
+	<highchart config="bidAskChart"></highchart>-->
+	<div class="row">
+		<h2>Market Change</h2>
+		<!--<button class="btn btn-default" ng-click="getEma([20,40,80,160,320,640],'change')">ema</button>--><!--select periods..?-->
+		<!--<button class="btn btn-default" ng-click="getTsf([20,40,80,160,320,640],'change')">tsf</button>--><!--select periods..?-->
+		<button class="btn btn-default" ng-click="getBband([10],[1,2,3],'change')">BBAND</button><!--select periods / sD..?-->
+		<!--<button class="btn btn-default" ng-click="getNn('change')">nn</button>-->
+		<button class="btn btn-default" ng-click="getPdf('change')">PDF</button><!--;)-->
+		<hr>
+		<highchart config="changeChart"></highchart>
+	</div>
 
-	<h2>Price Data</h2>
-	<button class="btn btn-default" ng-click="getEma([20,40,80,160,320,640],'price')">ema</button><!--select periods..?-->
-	<button class="btn btn-default" ng-click="getTsf([20,40,80,160,320,640],'price')">tsf</button><!--select periods..?-->
-	<button class="btn btn-default" ng-click="getBband([10],[1,2,3],'price')">bband</button><!--select periods / stD.?-->
-	<!--<button class="btn btn-default" ng-click="getNn('price')">nn</button>-->
-	<!--<button class="btn btn-default" ng-click="getPdf('price')">pdf</button>--><!--;)-->
-	<hr>
+	<div class="row">
+		<h2>Oscillator</h2>
+		<button class="btn btn-default" ng-click="getMacd([20,40,80,160,320,640],'change')">MACD</button>
+		<button class="btn btn-default" ng-click="getFosc([20,40,80,160,320,640],'change')">FOSC</button>
+		<button class="btn btn-default" ng-click="getRsi([20,40,80,160,320,640],'change')">RSI</button>
+		<hr>
+		<highchart config="oscillatorChart"></highchart>
+	</div>
 
-	<!--<nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3>-->
-	<highchart config="chartConfig"></highchart>
-
-	<!--<h2>Market Depth, volume</h2>-->
-	<h2>Order Book</h2><hr>
-	<highchart config="bidAskChart"></highchart>
-
-	<h2>Market Change</h2>
-	<!--<button class="btn btn-default" ng-click="getEma([20,40,80,160,320,640],'change')">ema</button>--><!--select periods..?-->
-	<!--<button class="btn btn-default" ng-click="getTsf([20,40,80,160,320,640],'change')">tsf</button>--><!--select periods..?-->
-	<button class="btn btn-default" ng-click="getBband([10],[1,2,3],'change')">bband</button><!--select periods / sD..?-->
-	<!--<button class="btn btn-default" ng-click="getNn('change')">nn</button>-->
-	<button class="btn btn-default" ng-click="getPdf('change')">pdf</button><!--;)-->
-	<hr>
-
-	<nvd3 options='marketOptions' data='marketGraphChangeDataRender'></nvd3>
-
-	<h2>Market Change^2</h2>
-	<!--
-	<button class="btn btn-default" ng-click="getEma('changeChange')">ema</button>
-	<button class="btn btn-default" ng-click="getTsf('changeChange')">tsf</button>
-	<button class="btn btn-default" ng-click="getBband([10],[1,2,3],'changeChange')">bband</button>
-	<button class="btn btn-default" ng-click="getNn('changeChange')">nn</button>
-	<button class="btn btn-default" ng-click="getPdf('changeChange')">pdf</button>
-	-->
-	<hr>
-
-	<nvd3 options='marketOptions' data='marketGraphChangeChangeDataRender'></nvd3>
-
-	<h2>Oscillator</h2>
-	<button class="btn btn-default" ng-click="getMacd([20,40,80,160,320,640],'change')">macd</button>
-	<button class="btn btn-default" ng-click="getFosc([20,40,80,160,320,640],'change')">fosc</button>
-	<button class="btn btn-default" ng-click="getRsi([20,40,80,160,320,640],'change')">rsi</button>
-	<hr>
-	
-	<nvd3 options='marketOptions' data='marketGraphOscillatorDataRender'></nvd3>
-
-	<h2>Probability Density</h2>
-	<!--<div style="max-height:500px;overflow:scroll">-->
+	<div class="row">
+		<h2>Probability Density</h2>
 		<canvas id="tableHeatmap" width="1200" height="500"></canvas>
-	<!--</div>-->
-	<!--<heatmap id="heatmap-1" data="heatmapData" config="heatmapConfig" width="834" height="400" class="ng-isolate-scope"></heatmap>-->
+	</div>
 
-	<!--HIGH CHART-->
+	<!--TODO: POSITIONS.. LONG SHORT.. SELL THIS AMOUNT AT THIS PRICE.. ETC. NOT YET EXECUTED-->
+	<div class="row">
+		<h2>Market Orders</h2>
+		<table class="table table-inverse table-hover">
+		    <thead>
+				<tr>
+					<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
+					<th></th>
+					<th></th>
+					<th>Date</th>
+				</tr>
+		    </thead>
+		    <tbody>
+				<tr ng-repeat="order in orders">
+					<td>{{order.type}}</td>
+					<td>{{order.amount}} {{order.asset2}}</td>
+					<td>{{order.price}} {{order.asset1}}</td>
+					<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+				</tr>
+		    </tbody>
+		</table>
+	</div>
 
-	<!--TODO: POSITIONS.. LONG SHORT.. SELL THIS AMOUNT AT THIS PRICE.. ETC. NOTO YET EXECUTED-->
-	<h2>Market Orders</h2>
-	<table class="table table-inverse table-hover">
-	    <thead>
-			<tr>
-				<th>Type</th><!--not relevant.. just reverse asset1 and 2.. -->
-				<th></th>
-				<th></th>
-				<th>Date</th>
-			</tr>
-	    </thead>
-	    <tbody>
-			<tr ng-repeat="order in orders">
-				<td>{{order.type}}</td>
-				<td>{{order.amount}} {{order.asset2}}</td>
-				<td>{{order.price}} {{order.asset1}}</td>
-				<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
-			</tr>
-	    </tbody>
-	</table>
-
-	<!--EXCHANGE-->
-	
-	<!--<h2>Ask</h2>
-	<form role="form">
-        <div class="form-group">
-            <input class="form-control" name="amount" placeholder="Amount" title="Amount" type="text"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="price" placeholder="Price" title="Price" type="text"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit">Create Order</button>
-        </div>
-    </form>
-
-	<h2>Bid</h2>
-    <form role="form">
-        <div class="form-group">
-            <input class="form-control" name="amount" placeholder="Amount" title="Amount" type="text"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="form-group">
-            <input class="form-control" name="price" placeholder="Price" title="Price" type="text"> 
-            <i class="fa fa-user"></i>
-        </div>
-        <div class="align-right">
-            <button class="btn btn-default log-btn" type="submit" value="submit">Create Order</button>
-        </div>
-    </form>-->
-	
 <div style="height:100px;"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
 
