--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -22,18 +22,18 @@
 	</div>
 
 	<div class="row">
-		<button ng-class="selectedClass('Live')" ng-click="getLive()">Live</button>
-		<button ng-class="selectedClass('5000')" ng-click="selectData(stateParams.path1, stateParams.path2, '5000')">5sec </button><!--x6-->
-		<button ng-class="selectedClass('30000')" ng-click="selectData(stateParams.path1, stateParams.path2, '30000')">30sec</button><!--x2-->
-		<button ng-class="selectedClass('60000')" ng-click="selectData(stateParams.path1, stateParams.path2, '60000')">1min </button><!--x5-->
-		<button ng-class="selectedClass('300000')" ng-click="selectData(stateParams.path1, stateParams.path2, '300000')">5min </button><!--x6-->
-		<button ng-class="selectedClass('1800000')" ng-click="selectData(stateParams.path1, stateParams.path2, '1800000')">30min</button><!--x2-->
-		<button ng-class="selectedClass('3600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '3600000')">1hr  </button><!--x2-->
-		<button ng-class="selectedClass('7200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '7200000')">2hr  </button><!--x2-->
-		<button ng-class="selectedClass('14400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '14400000')">4hr  </button><!--x2-->
-		<button ng-class="selectedClass('21600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '21600000')">6hr  </button><!--x3/2-->
-		<button ng-class="selectedClass('43200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '43200000')">12hr </button><!--x2-->
-		<button ng-class="selectedClass('86400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '86400000')">24hr </button><!--x2-->
+		<button ng-class="selectedClass('Live')" ng-click="getLive()">LIVE</button>
+		<button ng-class="selectedClass('5000')" ng-click="selectData(stateParams.path1, stateParams.path2, '5000')">5SEC </button><!--x6-->
+		<button ng-class="selectedClass('30000')" ng-click="selectData(stateParams.path1, stateParams.path2, '30000')">30SEC</button><!--x2-->
+		<button ng-class="selectedClass('60000')" ng-click="selectData(stateParams.path1, stateParams.path2, '60000')">1MIN </button><!--x5-->
+		<button ng-class="selectedClass('300000')" ng-click="selectData(stateParams.path1, stateParams.path2, '300000')">5MIN </button><!--x6-->
+		<button ng-class="selectedClass('1800000')" ng-click="selectData(stateParams.path1, stateParams.path2, '1800000')">30MIN</button><!--x2-->
+		<button ng-class="selectedClass('3600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '3600000')">1HR </button><!--x2-->
+		<button ng-class="selectedClass('7200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '7200000')">2HR </button><!--x2-->
+		<button ng-class="selectedClass('14400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '14400000')">4HR </button><!--x2-->
+		<button ng-class="selectedClass('21600000')" ng-click="selectData(stateParams.path1, stateParams.path2, '21600000')">6HR </button><!--x3/2-->
+		<button ng-class="selectedClass('43200000')" ng-click="selectData(stateParams.path1, stateParams.path2, '43200000')">12HR </button><!--x2-->
+		<button ng-class="selectedClass('86400000')" ng-click="selectData(stateParams.path1, stateParams.path2, '86400000')">24HR </button><!--x2-->
 	</div>
 	<hr>
 	<!--how much data..?-->
