--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -115,6 +115,10 @@
         <script src="/src/common/services/title.js"></script>
         <script src="/src/common/services/utils.js"></script>
         <!--SCRIPTS END-->
+
+        <script type="text/javascript">
+          io.sails.url = 'https://ccutl.herokuapp.com';
+        </script>
         
         <!--CDNS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
