--- a/.tmp/public/src/app/market/index.tpl.html
+++ b/.tmp/public/src/app/market/index.tpl.html
@@ -74,7 +74,9 @@
 
 	<div class="row">
 		<h2>Probability Density</h2>
-		<canvas id="tableHeatmap" width="1200" height="500"></canvas>
+		<!--<canvas id="tableHeatmap" width="1200" height="500"></canvas>-->
+		<highchart config="heatMapChart"></highchart>
+		<div class="spacing-10"></div>
 	</div>
 
 	<!--TODO: POSITIONS.. LONG SHORT.. SELL THIS AMOUNT AT THIS PRICE.. ETC. NOT YET EXECUTED-->
