--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -118,13 +118,13 @@
     <div class="spacing-50"></div>
 
     <div class="row">
-        <div class="col-sm-6">
+        <!--<div class="col-sm-6">
             <h3>Mapping the Market</h3>
             <highchart config="bidAskChart"></highchart>
-        </div>
+        </div>-->
 
-        <div class="col-sm-6">
-            <!--<highchart config="heatMapChart"></highchart>-->
+        <div class="col-sm-12">
+            <highchart config="heatMapChart"></highchart>
         </div>
     </div>
 
