--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -122,7 +122,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 			    <div style="text-align:left;" id="header-text-area">
-			       <h1>Empowered Financial Representation</h1>
+			       <h2>Empowered Financial Representation</h2>
 			       <h3 style="">Backed by Sound, Open Data</h3>
 			    </div>
 			</div>
@@ -180,7 +180,7 @@
 	<div style="text-align:left">
 		<div class="spacing-50"></div>
 		<div class="container" style="">
-			<h1><a href="/markets">Market Exposure</a></h1>
+			<h2><a href="/markets">Market Exposure</a></h2>
 			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<div class="spacing-10"></div>
 
@@ -223,7 +223,8 @@
 		<style>.nvd3 text{color:gray;fill:gray;}.nvd3 .nv-axis line{stroke:gray;}</style>
 		<div class="spacing-50"></div>
 		<div class="container">
-			<h1>Activity</h1>
+			<h2>Activity</h2>
+			<div class="spacing-10"></div>
 			<highchart config="chartConfig"></highchart>
 			<!--daily return vs index..-->
 			<div class="spacing-50"></div>
@@ -232,7 +233,7 @@
 
 	<div style="text-align:left;" class="container">
 		<div class="spacing-50"></div>
-		<h1>Order Book</h1>
+		<h2>Order Book</h2>
 		<h4>Transparent Investments</h4>
 		<div class="spacing-10"></div>
 		<table class="table table-inverse table-hover">
