--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -128,6 +128,17 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>Performance | Analysis </h3>
+            <p style="font-style:italic">How are we doing?</p>
+        </div>
+
+        <div class="col-sm-6">
+            <img style="max-height:300px;float:right" src="images/1.gif">
+        </div>
+    </div>
+
     <div class="spacing-50"></div>
     <highchart config="chartConfig"></highchart>
 
